--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 
 .navbar {
     overflow: hidden;
-    background-color: #FFFFFF;
+    background-color: #F4F4F4;
     justify-content: center;
     position: fixed;
     top: 0;
