--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
   .navbar a {
     float: right;
     display: inline-block;
-    color: #FFFFFF;
+    color: #F4F4F4;
     text-align: center;
     padding: 35px 35px;
     text-decoration: none;
