--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html{
   scroll-behavior: smooth;
 }
 body{
-    background-color: #white;
+    background-color: #F4F4F4;
     font-family: 'Poppins', sans-serif;
     margin: 0px;
   width: 100%
