--- a/style.css
+++ b/style.css
@@ -42,8 +42,7 @@ body{
     /* background-image: url('bgg.png');
     background-attachment: fixed; */
     background-size: 100% 100%;
-    padding: 0px;
-    margin-top: 500px;
+    padding: 0px
     color: #5d7581;
     height: 100%;
   }
